# dlc2action_annotation

./: .gitignore  AnnotationGUI.yaml  NOTICE.yml  README.md  annotator.py  cluster.py  colors.txt  default_config.yaml  dlc2action_gui.yaml  new_config.yaml  pyproject.toml  requirements.txt  temp.py  utils.py
cool_Proj 08 (16)/: annotator.py  cluster.py  utils.py
data/: detection_example.pickle  this_is_a  video_example_annotation.pickle
dev-tools/: update_license_headers.py
dlc2action_annotation/: annotator.py  cluster.py  config.yaml  default_config.yaml  utils.py
dlc2action_annotation/file_utils/: draw_histogram.py  extract_DLC_errors.py  file_transformer.py  split.py
dlc2action_annotation/project/: episode_creation.py  episode_training.py  episodes_list.py  project_creation.py  project_display.py  project_settings.py  starting_screen.py  utils.py
dlc2action_annotation/widgets/: actionbar.py  canvas.py  console.py  dialog.py  lists.py  progressbar.py  sampler.py  settings.py  viewbox.py  viewer.py  visuals.py
file_utils/: draw_histogram.py  extract_DLC_errors.py  file_transformer.py  split.py
readme_media/: cluster.md  installation.md  userguide.md
test fro paths/: config.yaml
test_7/Tracking data/: video_example_annotation.pickle
test_for_fiels/Project Config/: config.yaml
test_videos_2/Annotations/: annotations.npy
test_videos_2/Project Config/: config.yaml  settings.yaml
widgets/: actionbar.py  canvas.py  console.py  dialog.py  lists.py  progressbar.py  sampler.py  settings.py  viewbox.py  viewer.py  visuals.py
widgets/core/: backup.py  (+1 more)
(+21 files in other folders)
